package system.model.users;

public enum UserType {

    TEACHER, ADMINISTRATOR
}
