@startuml

title __USERS's Class Diagram__\n

  package system.model {
    package system.model.classes {
      package system.model.classes.users {
        interface IUser {
            {abstract} + getId()
            {abstract} + getLogin()
            {abstract} + getHash()
            {abstract} + getType()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.users {
        class User {
            - id : String
            - login : String
            - hash : String
            + User()
            + User()
            + User()
            + User()
            + changeId()
            + getId()
            + setId()
            + getLogin()
            + setLogin()
            + getHash()
            + setHash()
            + getType()
            + setType()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.users {
        enum UserType {
          TEACHER
          ADMINISTRATOR
        }
      }
    }
  }
  

  User -up-|> IUser
  User -up-|> Idable
  User o-- UserType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
